# internetwithviet

./: COMMANDS.md  README.md  alembic.ini  internetwithviet.db  pyproject.toml
alembic/: env.py
alembic/versions/: 5a26d1c19276_add_created_tstamp_and_modified_tstamp_.py  de0e7dc2c2eb_create_quotes_table.py
configs/: local.yaml
multidb/: env.py
multidb/versions/: 2023-12-13_004632ca84cb_add_unique_constraint_on_quotes_table.py  2023-12-13_bfe2eda9cce0_create_quotes_table.py  2023-12-25_41311264f64b_create_sources_table.py  72026ce9cd09_create_quotes_table.py  88e2ebbd8c8d_add_created_tstamp_and_modified_tstamp_.py
scripts/: init_db.sh
src/: __init__.py  app.py  configurations.py  database.py  models.py  schemas.py  utils.py
src/models/: __init__.py  quotes.py
src/quotes/: models.py  router.py  schemas.py  service.py
src/sources/: models.py
src/templates/: index.html.jinja2
