[project]
name = "InternetWithViet"
version = "0.1.0"
description = "A backend for the internetwithviet.com"
authors = [
    {name = "Viet Than", email = "thanhoangviet@gmail.com"},
]
dependencies = [
    "litestar[full]>=2.4.2",
    "aiosqlite>=0.19.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Viet Than"}

